[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/HechizoRayo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Animacions/rayo_16.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Animacions/rayo_cast_5.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 10 )

[sub_resource type="Animation" id=2]

resource_name = "ataqueRayil"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]

resource_name = "carga"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 4 ]
}

[node name="HechizoRayo" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 32, 0 )
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )
hframes = 16
_sections_unfolded = [ "Animation", "Offset", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ataqueRayil = SubResource( 2 )
blend_times = [  ]

[node name="Sprite2" type="Sprite" parent="." index="2"]

texture = ExtResource( 3 )
hframes = 5
frame = 4
_sections_unfolded = [ "Animation", "Region" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2" index="0"]

root_node = NodePath("..")
autoplay = "carga"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/carga = SubResource( 3 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_HechizoRayo_body_entered"]

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation2_finished"]

[connection signal="animation_finished" from="Sprite2/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


